tests/NormalTests/paczka2/big_fuzzy/81790517.err
Error in line 13: IFxdNkVP A^96 ^4,0
Error in line 19: IFxdNkVP S355 56,8
Error in line 26: IFxdNkVP A796 52,4
Error in line 30: A796 A796 8,54
Error in line 27: wNgKjAUYt A853 271,8
Error in line 23: uESqxgQLfIC A519 31,2
Error in line 18: A796 S355 351,6
Error in line 29: IFxdNkVP S355 47,6
Error in line 40: A796 A796 11,8
Error in line 60: fCF8ySwFV A853 9,7
Error in line 72: 3sShAk A853 -1,9
Error in line 62: 3sShAk A853 6,4
Error in line 75: A796 A519 5,Q
Error in line 80: A796 A519 5,53
Error in line 84: A796 A519 23,4
Error in line 100: fCF8ySwFV A853 76,1
Error in line 101: fCF8ySwFV S355 54,6
Error in line 114: A796 A796 43,6
Error in line 124: A796 A519 26,38
Error in line 126: A796 A796 5,6
Error in line 122: A796 A519 25,5
Error in line 127: fCF8ySwFV A796 78,0
Error in line 125: wNgKjAUYt A796 290,3
Error in line 138: wNgKjAUYt S355 47,0
Error in line 141: RuKsGS5 A796 6,0
Error in line 143: uESqxgQLfIC A796 39,2
Error in line 161: fCF8ySwFV S355 48,5
Error in line 163: 3sShAk A853 71,4
Error in line 169: RuKsGS5 S355 12,5
Error in line 159: IFxdNkVP A796 191,9
Error in line 183: fCF8ySwFV A519 16,91
Error in line 174: IFxdNkVP A853 85,2
Error in line 181: A796 S355 2,3
Error in line 207: fCF8ySwFV A853 75,2
Error in line 208: fCF8ySwFV A796 10,3
Error in line 201: RuKsGS5 A853 181,4
Error in line 216: fCF8ySwFV A796 70,7
Error in line 234: IFxdNkVP L355 16,3
Error in line 228: IFxdNkVP A853 13,9
Error in line 236: uESqxgQLfIC S355 21,4
Error in line 248: wNgKjAUYt A796 27,3
